--- a/index.html
+++ b/index.html
@@ -1,13 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <title>Document</title>
+    </head>
+    <body>
+        <header>
+            <div class="row-header">
+                <div class="col-header">
+                    <ul>
+                        <li>Donna</li>
+                        <li>Uomo</li>
+                        <li>Bambini</li>
+                    </ul>
+                </div>
+                <div class="col-header">
+                    <img src="./img/boolean-logo.png" alt="Logo" class="logo">
+                </div>
+                <div class="col-header">
+                    <ul>
+                        <li><i class="fa fa-user"></i></li>
+                        <li><i class="fa fa-heart"></i></li>
+                        <li><i class="fa fa-shopping-bag"></i></li>
+                    </ul>
+                </div>
+            </div>
+        </header>
+        <main>
+        </main>
+        <footer>
+        </footer>
+    </body>
 </html>
+
+
+
+
