--- a/index.html
+++ b/index.html
@@ -31,6 +31,55 @@
             </div>
         </header>
         <main>
+            <div class="container">
+                <div class="row">
+                    <div class="col-33">
+                        <div class="content">
+                            <img src="./img/1.webp" alt="levi's tee">
+                            <div></div>
+                            <div class="overlay"></div>
+                        </div>
+                    </div>
+                    <div class="col-33">
+                        <div class="content">
+                            <img src="./img/2.webp" alt="roses tee">
+                            <div></div>
+                            <div class="overlay"></div>
+                        </div>
+                    </div>    
+                    <div class="col-33">
+                        <div class="content">
+                            <img src="./img/3.webp" alt="pastel suit">
+                            <div ></div>
+                            <div class="overlay"></div>
+                        </div>
+                    </div>        
+                </div>
+                <div class="row">
+                    <div class="col-33">
+                        <div class="content">
+                            <img src="./img/4.webp" alt="levi's tee">
+                            <div></div>
+                            <div class="overlay"></div>
+                        </div>
+                    </div>
+                    <div class="col-33">
+                        <div class="content">
+                            <img src="./img/5.webp" alt="roses tee">
+                            <div></div>
+                            <div class="overlay"></div>
+                        </div>
+                    </div>    
+                    <div class="col-33">
+                        <div class="content">
+                            <img src="./img/6.webp" alt="pastel suit">
+                            <div ></div>
+                            <div class="overlay"></div>
+                        </div>
+                    </div>        
+                </div>
+
+            </div>
         </main>
         <footer>
         </footer>
