--- a/index.html
+++ b/index.html
@@ -36,21 +36,27 @@
                     <div class="col-33">
                         <div class="content">
                             <img src="./img/1.webp" alt="levi's tee">
-                            <div></div>
+                            <p class="font-12px">Levi's</p>
+                            <p class="item">RELAXED FIT TEE UNISEX</p>
+                            <P class="font-12px"><span id="price">14,99 &euro;</span> <span id="old-price">29,99 &euro;</span></P>
                             <div class="overlay"></div>
                         </div>
                     </div>
                     <div class="col-33">
                         <div class="content">
                             <img src="./img/2.webp" alt="roses tee">
-                            <div></div>
+                            <p class="font-12px">Guess</p>
+                            <p class="item">ROSES TEE</p>
+                            <P class="font-12px"><span id="price">20,99 &euro;</span> <span id="old-price">29,99 &euro;</span></P>
                             <div class="overlay"></div>
                         </div>
                     </div>    
                     <div class="col-33">
                         <div class="content">
                             <img src="./img/3.webp" alt="pastel suit">
-                            <div ></div>
+                            <p class="font-12px">Come Zucchero Filato</p>
+                            <p class="item">VOGLIA DI COLORI PASTELLO</p>
+                            <P class="font-12px"><span id="price">129,99 &euro;</span> <span id="old-price">184,99 &euro;</span></P>
                             <div class="overlay"></div>
                         </div>
                     </div>        
@@ -59,21 +65,27 @@
                     <div class="col-33">
                         <div class="content">
                             <img src="./img/4.webp" alt="levi's tee">
-                            <div></div>
+                            <p class="font-12px">Levi's</p>
+                            <p class="item">TEE UNISEX</p>
+                            <P class="font-12px"><span id="price">14,99 &euro;</span> <span id="old-price">29,99 &euro;</span></P>
                             <div class="overlay"></div>
                         </div>
                     </div>
                     <div class="col-33">
                         <div class="content">
                             <img src="./img/5.webp" alt="roses tee">
-                            <div></div>
+                            <p class="font-12px">Maya Deluxe</p>
+                            <p class="item">STRIPE BODICE</p>
+                            <P class="font-12px"><span id="price">99,99 &euro;</span></P>
                             <div class="overlay"></div>
                         </div>
                     </div>    
                     <div class="col-33">
                         <div class="content">
                             <img src="./img/6.webp" alt="pastel suit">
-                            <div ></div>
+                            <p class="font-12px">Esprit</p>
+                            <p class="item">MAGLIONE - BLACK</p>
+                            <P class="font-12px"><span id="price">29,99 &euro;</span></P>
                             <div class="overlay"></div>
                         </div>
                     </div>        
