red and green labels added

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
                     <div class="col-33">
                         <div class="content">
                             <img src="./img/1.webp" alt="levi's tee">
+                            <div class="label-red">-50%</div>
+                            <div class="label-green">Sostenibilità</div>
                             <p class="font-12px">Levi's</p>
                             <p class="item">RELAXED FIT TEE UNISEX</p>
                             <P class="font-12px"><span id="price">14,99 &euro;</span> <span id="old-price">29,99 &euro;</span></P>
@@ -45,6 +47,7 @@
                     <div class="col-33">
                         <div class="content">
                             <img src="./img/2.webp" alt="roses tee">
+                            <div class="label-red">-30%</div>
                             <p class="font-12px">Guess</p>
                             <p class="item">ROSES TEE</p>
                             <P class="font-12px"><span id="price">20,99 &euro;</span> <span id="old-price">29,99 &euro;</span></P>
@@ -54,6 +57,7 @@
                     <div class="col-33">
                         <div class="content">
                             <img src="./img/3.webp" alt="pastel suit">
+                            <div class="label-red">-30%</div>
                             <p class="font-12px">Come Zucchero Filato</p>
                             <p class="item">VOGLIA DI COLORI PASTELLO</p>
                             <P class="font-12px"><span id="price">129,99 &euro;</span> <span id="old-price">184,99 &euro;</span></P>
@@ -65,6 +69,8 @@
                     <div class="col-33">
                         <div class="content">
                             <img src="./img/4.webp" alt="levi's tee">
+                            <div class="label-red">-50%</div>
+                            <div class="label-green">Sostenibilità</div>
                             <p class="font-12px">Levi's</p>
                             <p class="item">TEE UNISEX</p>
                             <P class="font-12px"><span id="price">14,99 &euro;</span> <span id="old-price">29,99 &euro;</span></P>
