footer done, bg color and font of header changed

--- a/index.html
+++ b/index.html
@@ -100,6 +100,22 @@
             </div>
         </main>
         <footer>
+            <div class="container">
+                <div class="row footer">
+                    <div class="col-footer">
+                        <h4>Booleando s.r.l.</h4>
+                        <span class="info">Informazioni legali</span>
+                        <span class="info">Informativa sulla privacy</span>
+                        <span class="info">Diritto di recesso</span>
+                    </div>
+                    <div class="col-footer">
+                        <h5>Trovaci anche su</h5>
+                        <ul>
+                            <li><i class="fa fa-instagram"></i></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </footer>
     </body>
 </html>
