overlay and hearts done

--- a/index.html
+++ b/index.html
@@ -36,32 +36,35 @@
                     <div class="col-33">
                         <div class="content">
                             <img src="./img/1.webp" alt="levi's tee">
+                            <img src="./img/1b.webp" alt="levi's tee" class="overlay">
+                            <div class="heart">&hearts;</div>
                             <div class="label-red">-50%</div>
                             <div class="label-green">Sostenibilità</div>
                             <p class="font-12px">Levi's</p>
                             <p class="item">RELAXED FIT TEE UNISEX</p>
                             <P class="font-12px"><span id="price">14,99 &euro;</span> <span id="old-price">29,99 &euro;</span></P>
-                            <div class="overlay"></div>
                         </div>
                     </div>
                     <div class="col-33">
                         <div class="content">
                             <img src="./img/2.webp" alt="roses tee">
+                            <img src="./img/2b.webp" alt="roses tee" class="overlay">
+                            <div class="heart">&hearts;</div>
                             <div class="label-red">-30%</div>
                             <p class="font-12px">Guess</p>
                             <p class="item">ROSES TEE</p>
                             <P class="font-12px"><span id="price">20,99 &euro;</span> <span id="old-price">29,99 &euro;</span></P>
-                            <div class="overlay"></div>
                         </div>
                     </div>    
                     <div class="col-33">
                         <div class="content">
-                            <img src="./img/3.webp" alt="pastel suit">
+                            <img src="./img/3.webp" alt="suit">
+                            <img src="./img/3b.webp" alt="suit" class="overlay">
+                            <div class="heart">&hearts;</div>
                             <div class="label-red">-30%</div>
                             <p class="font-12px">Come Zucchero Filato</p>
                             <p class="item">VOGLIA DI COLORI PASTELLO</p>
                             <P class="font-12px"><span id="price">129,99 &euro;</span> <span id="old-price">184,99 &euro;</span></P>
-                            <div class="overlay"></div>
                         </div>
                     </div>        
                 </div>
@@ -69,30 +72,33 @@
                     <div class="col-33">
                         <div class="content">
                             <img src="./img/4.webp" alt="levi's tee">
+                            <img src="./img/4b.webp" alt="levi's tee" class="overlay">
+                            <div class="heart">&hearts;</div>
                             <div class="label-red">-50%</div>
                             <div class="label-green">Sostenibilità</div>
                             <p class="font-12px">Levi's</p>
                             <p class="item">TEE UNISEX</p>
                             <P class="font-12px"><span id="price">14,99 &euro;</span> <span id="old-price">29,99 &euro;</span></P>
-                            <div class="overlay"></div>
                         </div>
                     </div>
                     <div class="col-33">
                         <div class="content">
                             <img src="./img/5.webp" alt="roses tee">
+                            <img src="./img/5b.webp" alt="levi's tee" class="overlay">
+                            <div class="heart">&hearts;</div>
                             <p class="font-12px">Maya Deluxe</p>
                             <p class="item">STRIPE BODICE</p>
                             <P class="font-12px"><span id="price">99,99 &euro;</span></P>
-                            <div class="overlay"></div>
                         </div>
                     </div>    
                     <div class="col-33">
                         <div class="content">
                             <img src="./img/6.webp" alt="pastel suit">
+                            <img src="./img/6b.webp" alt="levi's tee" class="overlay">
+                            <div class="heart">&hearts;</div>
                             <p class="font-12px">Esprit</p>
                             <p class="item">MAGLIONE - BLACK</p>
                             <P class="font-12px"><span id="price">29,99 &euro;</span></P>
-                            <div class="overlay"></div>
                         </div>
                     </div>        
                 </div>
@@ -111,7 +117,7 @@
                     <div class="col-footer">
                         <h5>Trovaci anche su</h5>
                         <ul>
-                            <li><i class="fa fa-instagram"></i></li>
+                            <li></li>
                         </ul>
                     </div>
                 </div>
