social icons of footer done

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                             <img src="./img/1.webp" alt="levi's tee">
                             <img src="./img/1b.webp" alt="levi's tee" class="overlay">
                             <div class="heart">&hearts;</div>
-                            <div class="label-red">-50%</div>
-                            <div class="label-green">Sostenibilità</div>
+                            <div class="label red">-50%</div>
+                            <div class="label green">Sostenibilità</div>
                             <p class="font-12px">Levi's</p>
                             <p class="item">RELAXED FIT TEE UNISEX</p>
                             <P class="font-12px"><span id="price">14,99 &euro;</span> <span id="old-price">29,99 &euro;</span></P>
@@ -50,7 +50,7 @@
                             <img src="./img/2.webp" alt="roses tee">
                             <img src="./img/2b.webp" alt="roses tee" class="overlay">
                             <div class="heart">&hearts;</div>
-                            <div class="label-red">-30%</div>
+                            <div class="label red">-30%</div>
                             <p class="font-12px">Guess</p>
                             <p class="item">ROSES TEE</p>
                             <P class="font-12px"><span id="price">20,99 &euro;</span> <span id="old-price">29,99 &euro;</span></P>
@@ -61,7 +61,7 @@
                             <img src="./img/3.webp" alt="suit">
                             <img src="./img/3b.webp" alt="suit" class="overlay">
                             <div class="heart">&hearts;</div>
-                            <div class="label-red">-30%</div>
+                            <div class="label red">-30%</div>
                             <p class="font-12px">Come Zucchero Filato</p>
                             <p class="item">VOGLIA DI COLORI PASTELLO</p>
                             <P class="font-12px"><span id="price">129,99 &euro;</span> <span id="old-price">184,99 &euro;</span></P>
@@ -74,8 +74,8 @@
                             <img src="./img/4.webp" alt="levi's tee">
                             <img src="./img/4b.webp" alt="levi's tee" class="overlay">
                             <div class="heart">&hearts;</div>
-                            <div class="label-red">-50%</div>
-                            <div class="label-green">Sostenibilità</div>
+                            <div class="label red">-50%</div>
+                            <div class="label green">Sostenibilità</div>
                             <p class="font-12px">Levi's</p>
                             <p class="item">TEE UNISEX</p>
                             <P class="font-12px"><span id="price">14,99 &euro;</span> <span id="old-price">29,99 &euro;</span></P>
@@ -96,6 +96,7 @@
                             <img src="./img/6.webp" alt="pastel suit">
                             <img src="./img/6b.webp" alt="levi's tee" class="overlay">
                             <div class="heart">&hearts;</div>
+                            <div class="label green">Sostenibilità</div>
                             <p class="font-12px">Esprit</p>
                             <p class="item">MAGLIONE - BLACK</p>
                             <P class="font-12px"><span id="price">29,99 &euro;</span></P>
@@ -114,10 +115,14 @@
                         <span class="info">Informativa sulla privacy</span>
                         <span class="info">Diritto di recesso</span>
                     </div>
-                    <div class="col-footer">
+                    <div class="col-footer font-15px">
                         <h5>Trovaci anche su</h5>
                         <ul>
-                            <li></li>
+                            <li><i class="fa-brands fa-twitter"></i></li>
+                            <li><i class="fa-brands fa-facebook"></i></li>
+                            <li><i class="fa-brands fa-instagram"></i></li>
+                            <li><i class="fa-brands fa-pinterest"></i></li>
+                            <li><i class="fa-brands fa-youtube"></i></li>
                         </ul>
                     </div>
                 </div>
