fixed green 6th image green label

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                             <img src="./img/6.webp" alt="pastel suit">
                             <img src="./img/6b.webp" alt="levi's tee" class="overlay">
                             <div class="heart">&hearts;</div>
-                            <div class="label green">Sostenibilità</div>
+                            <div class="label green" id="left">Sostenibilità</div>
                             <p class="font-12px">Esprit</p>
                             <p class="item">MAGLIONE - BLACK</p>
                             <P class="font-12px"><span id="price">29,99 &euro;</span></P>
