--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
         <title>Document</title>
     </head>
     <body>
-        <header>
+        <!-- START OF HEADER -->
+        <header class="w100">
             <div class="row-header">
                 <div class="col-header">
                     <ul>
@@ -30,9 +31,11 @@
                 </div>
             </div>
         </header>
+        <!-- START OF MAIN -->
         <main>
             <div class="container">
-                <div class="row">
+                <!-- FIRST ROW WITH 3 IMAGES -->
+                <div class="row w100">
                     <div class="col-33">
                         <div class="content">
                             <img src="./img/1.webp" alt="levi's tee">
@@ -68,7 +71,8 @@
                         </div>
                     </div>        
                 </div>
-                <div class="row">
+                <!-- SECOND ROW WITH 3 IMAGES -->
+                <div class="row w100">
                     <div class="col-33">
                         <div class="content">
                             <img src="./img/4.webp" alt="levi's tee">
@@ -103,12 +107,12 @@
                         </div>
                     </div>        
                 </div>
-
             </div>
         </main>
-        <footer>
+        <!-- START OF FOOTER -->
+        <footer class="w100">
             <div class="container">
-                <div class="row footer">
+                <div class="row footer w100">
                     <div class="col-footer">
                         <h4>Booleando s.r.l.</h4>
                         <span class="info">Informazioni legali</span>
